k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-grpc-service
  labels:
    app: rest-grpc-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 6565
    targetPort: 6565
    protocol: TCP
    name: grpc
  selector:
    app: rest-grpc-service
